namespaces/vij-argocd.cloud-platform.service.justice.gov.uk/live0-to-live1/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: live0-to-live1
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "live0-dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "cp-live0"
    cloud-platform.justice.gov.uk/application: "app-live0"
    cloud-platform.justice.gov.uk/owner: "vijay.veeranki: cloud-platform"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/vijay-veeranki-moj/helloworld.git"
