namespaces/vij-argocd.cloud-platform.service.justice.gov.uk/live0-to-live1/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rubyapp-service
  labels:
    app: rubyapp-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: helloworld-rubyapp
